fix: resolve Windows file lock compilation issue and integrate market-maker bot to unified Java 21 virtual threads bootstrap